@@ -1,3 +1,8 @@
+2014-04-17  Karl Berry  <karl@tug.org>
+
+	* Makefile.am (noinst_PROGRAMS): installing a program named
+	`paperconf' in TL seems implausible to me.  Leaving it out for now.
+
 2014-01-13  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	Renamed libs/paper => libs/libpaper/.
